# fastapi-gateway-api

./: README.md
api/: .dockerignore  Dockerfile  Makefile  pyproject.toml
api/k8s/config/: config.yaml
api/k8s/manifests/: 2-deployment.yaml  3-service.yaml  4-ingress.yaml
api/src/: app.py  mockdb.py
api/src/domain/: account.py  invoice.py
api/src/repositories/: account_repository.py  invoice_repository.py
api/src/routers/: account_router.py  invoice_router.py
api/src/schemas/: account_schemas.py  invoice_schemas.py
api/tests/tests_domain/: test_domain.py
