[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["leandrosouzaf30 <leandrosouzaf30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.115.12,<0.116.0"
pytest = ">=8.3.5,<9.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
